Show only lastTask; Cols for node details

--- a/app-src/src/App.css
+++ b/app-src/src/App.css
@@ -34,8 +34,13 @@
     table-layout: inherit !important;
 }
 
-#containerTable #firstCol {
+#containerTable .nodeAttribute {
     width: 200px;
+    white-space: nowrap;
+}
+
+#containerTable .nodeAttributeSmall {
+    width: 100px;
     white-space: nowrap;
 }
 
