--- a/app-src/src/App.css
+++ b/app-src/src/App.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 50px;
+}
+
 #background-image {
     position: fixed;
     right: 20px;
@@ -43,6 +47,14 @@
 #containerTable .nodeAttributeSmall {
     width: 100px;
     white-space: nowrap;
+}
+
+#portsTable #publishedPort, #portsTable #targetPort, #portsTable #publishMode, #portsTable #protocol {
+    width: 150px;
+}
+
+#portsTable #arrow {
+    width: 50px;
 }
 
 #tasksTable #timestampCol {
