--- a/app-src/src/App.css
+++ b/app-src/src/App.css
@@ -103,3 +103,16 @@ table ul li {
 .toast-container {
     z-index: 1000;
 }
+
+@keyframes rotating {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.rotating {
+    animation: rotating 2s linear infinite;
+}
