fix(tooltip): Wider service status tooltip
Display the full timestamp on one line

--- a/app-src/src/App.css
+++ b/app-src/src/App.css
@@ -116,3 +116,9 @@ table ul li {
 .rotating {
     animation: rotating 2s linear infinite;
 }
+
+.service-status-tooltip {
+    .tooltip-inner {
+        min-width: 250px;
+    }
+}
